apps/infrastructure/longhorn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
spec:
  ingressClassName: cilium
  rules:
    - host: "cwk.longhorn"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
